--- a/aidam-site/src/styles/Inicio.module.css
+++ b/aidam-site/src/styles/Inicio.module.css
@@ -59,11 +59,25 @@
 }
 
 .back {
-  background-image: url('../assets/images/nina-sindrome-down-pintando-colores.jpg');
   background-size: cover;
   transform: rotateY(-180deg);
   z-index: 1;
   transition: transform 0.5s ease-in-out;
+}
+.img1 {
+  background-image: url('../assets/images/mujer-joven-hacer-terapia-habla-ninos.jpg');
+  background-position-x: 10%;
+}
+.img2 {
+  background-image: url('../assets/images/trabajoconjunto.jpg');
+}
+.img3 {
+  background-image: url('../assets/images/nina-sindrome-down-pintando-colores.jpg');
+  background-position-x: 35%;
+}
+.img4 {
+  background-image: url('../assets/images/personas-mayores.jpg');
+  background-position-y: 76%; 
 }
 
 .cardContainer:hover .front {
