--- a/aidam-site/src/styles/Navbar.module.css
+++ b/aidam-site/src/styles/Navbar.module.css
@@ -50,6 +50,22 @@
   transform: translateX(-50%) scaleX(1);
 }
 
+.activeSite {
+  color: #b1b3e7;
+}
+
+.activeSite::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 100%;
+  height: 3px;
+  transform: translateX(-50%) scaleX(1);
+  background-color: #b1b3e7;
+  transform-origin: center;
+}
+
 .container {
   display: flex;
   justify-content: center;
