--- a/aidam-site/src/styles/Navbar.module.css
+++ b/aidam-site/src/styles/Navbar.module.css
@@ -9,7 +9,7 @@
   border-top: 50px solid transparent;
   border-bottom: 0px solid transparent;
   border-right: 100px solid #202266;
-  transform: translate(1px, 43px);
+  transform: translate(1px, 43.5px);
 }
 .triangleTop {
   width: 0;
@@ -19,6 +19,11 @@
   border-bottom: 50px solid transparent;
   border-right: 100px solid #202266;
   transform: translate(1px, -50px);
+}
+@media(min-width: 1100px) {
+  .triangleBottom {
+    transform: translate(1px, 43px);
+  }
 }
 
 .navbarButton {
